# Kiosk

./: .gitignore  README.MD  kiosk-setup.bat  latest.json  package-lock.json  package.json
.run/: Build.run.xml  Dev.run.xml
.tauri/: service-desk-desktop.key  service-desk-desktop.key.pub
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  windows_api.rs
