[package]
name = "service-desk-kiosk"
version = "0.1.4"
description = "Service Desk Kiosk is a cross-platform desktop application built using the Tauri Framework. This application is designed to create a kiosk-like interface with specific configurations and features for ease of use in service desk scenarios."
authors = ["Drew Chase"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "service_desk_kiosk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winapi = {version = "0.3.9", features = ["winuser", "libloaderapi"] }
tokio = "1.43.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
